fix(header): fix header scrollbar and background color

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+
+body {
+  background-color: #0c0a09; /* stone-950 */
+}
